--- a/src/main/resources/public/Fonts/Lato/latostyle.css
+++ b/src/main/resources/public/Fonts/Lato/latostyle.css
@@ -8,15 +8,16 @@ body {
 }
 h1 {
 	font-family: "LatoWebLight";
-	font-size: 44pt;
+	font-size: 48pt;
 	font-style: normal;
 	margin: 0 0 0 0;
 	padding: 0 0 0 0;
+	text-decoration:underline;
 }
 
 h2 {
 	font-family: "LatoWebLight";
-	font-size: 40pt;
+	font-size: 28pt;
 	font-style: normal;
 	margin: 0 0 0 0;
 	padding: 0 0 0 0;
@@ -28,11 +29,35 @@ p {
 	margin: 0 0 0 0;
 	padding: 0 0 0 0;
 }
+img {
+	margin: 10px 0;
+}
+pborder {
+	font-family: "LatoWebLight";
+	font-size: 20pt;
+	font-style: normal;
+	margin: 0 0 0 0;
+	padding: 5px 7px;
+	border: 4px solid black;
+}
+.precinctName {
+	border: 5px solid black;
+	min-width: 300px;
+	margin: auto;
+}
+.invisibleBox{
+	max-width: 500px;
+	margin: auto;
+}
+img.scaledown {
+	height: 5%;
+	width: 5%;
+}
 #menu {
 	position: fixed;
 	top: 0.50em;
-    left: 0;
-	
+	left: 0;
+
 }
 #nav {
 	font-family: "LatoWeb";
@@ -56,7 +81,7 @@ p {
 	text-decoration: none;
 	background-color: #eee;
 	color:#222;
-	
+
 }
 
 .large {
